coommit by karan after successfully registered the email and password to firebase 25032024

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,6 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-
-
 }
 
 android {
@@ -26,7 +24,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
     compileOptions {
@@ -45,13 +43,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    //
 
-    implementation 'com.google.firebase:firebase-auth:22.3.1'//21.0.0
-   // implementation(platform("com.google.firebase:firebase-bom:32.8.0"))
-   // implementation("com.google.firebase:firebase-analytics")
-    implementation'com.google.firebase:firebase-bom:32.8.0'
-   // implementation'com.google.firebase:firebase-analytics'
+
+    implementation 'com.google.firebase:firebase-auth-ktx:22.3.1'//21.0.0
+    implementation 'com.google.firebase:firebase-bom:32.8.0'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:21.0.0'
+
 
 
 
