commit by karan after implement bottomnavigationview with fragments 30032024 afternnon

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 
     //for scanner
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.0'
+    //rounded imageview
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
 
 
