--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-bom:32.8.0'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-auth:21.0.0'
+    implementation 'com.google.firebase:firebase-database:20.3.1'
 
     //for scanner
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.0'
