--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.0'
     //rounded imageview
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.github.DantSu:ESCPOS-ThermalPrinter-Android:3.3.0'
 
 
 
