--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
         android:theme="@style/Theme.ShopBillInventory"
         tools:targetApi="31">
         <activity
+            android:name=".ShowPerticularBillActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".BusinessProfileActivity"
             android:exported="false">
             <meta-data
